--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,9 @@ jobs:
       - checkout # check out the code in the project directory
       - run: echo "hello world"
       - run: uptime -p
+      - run:
+          name: AWS EC2 Deployment
+          branch: master
+          command: cd learning-circleCI
+                   echo "It opened the file"
+                  #  ssh -i "TestingatMS.pem" ubuntu@ec2-18-220-15-59.us-east-2.compute.amazonaws.com
