--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: ec2-18-220-15-59.us-east-2.compute.amazonaws.com
+      - image: 274501458307.dkr.ec2-18-220-15-59.us-east-2.compute.amazonaws.com
         aws_auth:
           aws_access_key_id: 'AKIAIWBJ6IY4ULAQIGBA'
           aws_secret_access_key: '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'
